2015-03-18  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed, kick the GTK bots to regenerate makefile.

        * Source/cmake/OptionsGTK.cmake:

2015-03-17  Ryuan Choi  <ryuan.choi@navercorp.com>

        [EFL] Expose JavaScript binding interface through ewk_extension
        https://bugs.webkit.org/show_bug.cgi?id=142033

        Reviewed by Gyuyoung Kim.

        * Source/cmake/OptionsEfl.cmake: Added HEADER_INSTALL_DIR variable.

2015-03-17  Philippe Normand  <pnormand@igalia.com>

        [GTK] basic OpenWebRTC build support
        https://bugs.webkit.org/show_bug.cgi?id=142393

        Reviewed by Carlos Garcia Campos.

        * Source/cmake/FindOpenWebRTC.cmake: Added.
        * Source/cmake/OptionsGTK.cmake: Look for OpenWebRTC library if
        mediastream build is enabled.

2015-03-17  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        [CMake][EFL] Build test tools only for developer mode
        https://bugs.webkit.org/show_bug.cgi?id=142761

        Reviewed by Csaba Osztrogonác.

        Do not build EFL MiniBrowser, WebKitTestRunner, and ImageDiff on production mode.

        * Source/cmake/OptionsEfl.cmake:
        * Source/cmake/OptionsGTK.cmake: Move ENABLE_MINIBROWSER to common place.
        * Source/cmake/WebKitFeatures.cmake: Define ENABLE_MINIBROWSER variable.
        * Source/cmakeconfig.h.cmake:

2015-03-16  Ryosuke Niwa  <rniwa@webkit.org>

        Enable ES6 classes by default
        https://bugs.webkit.org/show_bug.cgi?id=142774

        Reviewed by Gavin Barraclough.

        * Source/cmake/WebKitFeatures.cmake:

2015-03-16  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        [CMake][EFL] Rearrange OptionEFL.cmake to improve readability 
        https://bugs.webkit.org/show_bug.cgi?id=142722

        Reviewed by Csaba Osztrogonác.

        Categorize to define cmake variables, to find necessary packages,
        use upper case for "glib_conponents" cmake variable name, re-arrange
        wrong alphabet sorting, and so on.
