@@ -1,3 +1,12 @@
+2015-03-19  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [GTK] Fix inspector userinterface related incremental build issue
+        https://bugs.webkit.org/show_bug.cgi?id=142849
+
+        Reviewed by Carlos Garcia Campos.
+
+        * Source/cmake/OptionsGTK.cmake: Revert r181733.
+
 2015-03-18  Csaba Osztrogonác  <ossy@webkit.org>
 
         Unreviewed, kick the GTK bots to regenerate makefile.
